# ai-control-panel-mcp

./: .gitignore  README.md  mcp_config.json  pyproject.toml
docs/: development.md
mcp/src/ai_control_panel_mcp/: server.py
server/: Dockerfile  VISION_API.md  auto_click_aliyun.py  auto_click_gui.py  build.bat  config.json  debug_page.py  main.py  mcp_config.json  mcp_server.py  requirements.txt  start.bat  start.vbs  test_doubao.py  test_image_gen.ps1
server/anti_detection/: fingerprint.py
server/browser_agent/: __init__.py  actions.py  analyzer.py  browser_manager.py  controller.py  fingerprint.py
server/core/: __init__.py  event_bus.py  registry.py  server.py  task_queue.py
server/data/: accounts.json  vision_dir.json
server/data/browser_profile/: Last Browser  Local State
server/data/browser_profile/Default/: BrowsingTopicsState  DIPS  Favicons  History  Preferences  Secure Preferences  Top Sites  Web Data
server/data/browser_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  index
server/data/browser_profile/ShaderCache/: data_1  (+1 more)
server/executors/: __init__.py  base.py
server/mcp_vision/: mcp_server.py
server/proxy_providers/: base.py  direct_provider.py  tor_provider.py  workers_provider.py
server/session/: account_manager.py  login_helper.py
server/web/dashboard/: app.js  index.html
src/ai_control_panel_mcp/: __init__.py
(+1561 files in other folders)
